Release 0.5-0:
  * Generalize pdgemm() wrapper.
  * Update to RNACI v0.5.0.
  * Added base.pdgelqf().
  * Added base.rpdorglq().
  * Exported native routines.
  * Fixed base.matexp() bug.
  * Fixed some compiler warnings.
  * Cleaned up some internal issues.
  * Initial support for BLACS contexts with multiple MPI communicators.
  * Fixed Windows build issue (Jeroen Ooms).

Release 0.4-6:
  * Fix indexing problem in pdsweep()

Release 0.4-5:
  * Rewrote sweeper.
  * Remove -w and fix compiler warnings.
  * Update internal RNACI.
  * Fixed several serious memory issues when computing eigenvalues.
  * Switch pdsyev() to pdsyevr().

Release 0.4-4:
  * Add custom distribution function to replace pdgemr2d() for most purposes.
  * Fixed pdgemr2d() bug.
  * Fix several issues with condition numbers.
  * Some small internal cleanup.

Release 0.4-3:
  * Add pigemr2d() wrapper.
  * Added g2lcoord()
  * Fixed indxg2p bug indexing bug.
  * Swap floor() to as.integer() in indexing functions.

Release 0.4-2:
  * Fixed major problem with internal BLACS grid management with MKL.
  * Switched to a header-only RNACI.
  * Fixed build issues on Solaris (wcc).
  * Added flag to disable src/export_blacs (needed for Intel mpi).

Release 0.4-1:
  * Fixed mkgblmat bug when using non-full contexts.
  * Fixed build issue with Intel compilers.
  * Updated README.md.

Release 0.4-0:
  * Changed base api.
  * Numerous improvements to documentation.
  * Switched to roxygen2.
  * Numerous source organization improvements.

Release 0.3-0
  * Fixed compiler warnings generated from calling Fortran routines.
  * Cleaned up R wrappers.
  * Fixed memory/gc issue in R_PDGELS().
  * Nasty ICTXT bug in descinit (notably affecting Cpdgemr2d) fixed.
  * Modified matrix exponential kernels to take p as argument.
  * Fixed OpenMP issues in Intel compiler suite.
  * Fixed portability issue in Makevars.in.
  * Stopgap fixed regression in MKSUBMAT.
  * Stopgap fixed regression in MKGBLMAT.