@@ -15,12 +15,7 @@ MPI_LIB = $(shell ${R_SCMD} \
 
 ### Setup R package flags and substitute by configure for ${MPI_...}.
 PKG_CPPFLAGS = -I"$(MPI_INCLUDE)"  -I../inst/RNACI
-PKG_CFLAGS = $(SHLIB_OPENMP_CFLAGS) 
-PKG_FFLAGS = $(SHLIB_OPENMP_FFLAGS) 
-PKG_FCFLAGS = $(SHLIB_OPENMP_FCFLAGS) 
-### Order is matter.
-PKG_LIBS = "$(SLAP_LDFLAGS)" $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) \
-           "$(MPI_LIB)" $(RNACI_LDFLAGS) $(SHLIB_OPENMP_CFLAGS)
+PKG_LIBS = "$(SLAP_LDFLAGS)" $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) "$(MPI_LIB)" $(RNACI_LDFLAGS)
 
 ### Setup R source code and objects.
 R_SRCS_C = $(wildcard *.c) \
